--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <!-- Brand -->
         <!-- <a class="navbar-brand" href="#"><span class="josh">JOSH</span> <span class="orange">WHITKIN</span> </a> -->
       
-        <a class="navbar-brand" href="#"> <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+        <a class="navbar-brand" href="#"> 
         <lottie-player src="images/logo-anim.json" background="transparent" speed="1" style="width: 250px; height: 100px" direction="1" mode="normal" autoplay></lottie-player> </a>
 
         <!-- Toggler/collapsibe Button -->
@@ -137,7 +137,12 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>
 
+<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+<script src="https://unpkg.com/@lottiefiles/lottie-interactivity@latest/dist/lottie-interactivity.min.js"></script>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>            
+
 <script src="script.js"></script>
 </body>
 </html>
